fix a bug about scrollbar and modal

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ html {
 }
 
 :root {
-  overflow-y: auto;
+  overflow-y: visible;
   overflow-x: hidden;
 }
 
