--- a/src/components/BoothInfoCard/boothInfoCard.module.css
+++ b/src/components/BoothInfoCard/boothInfoCard.module.css
@@ -1,8 +1,20 @@
-.navBox{
+.box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cardBox {
+    width: auto;
+    height: auto;
+    margin: 0 auto
+}
+
+.navBox {
     height: 40px;
     display: flex;
     align-items: center;
-    
+
 }
 
 .contentBox {
