--- a/src/components/StallItem/stallItem.module.css
+++ b/src/components/StallItem/stallItem.module.css
@@ -1,22 +1,24 @@
-
-.cardBox{
+.cardBox {
     padding: 0;
-    width: 280px;
+    /* width: 280px; */
     height: auto;
     border-radius: 25px;
+    margin: 0 auto;
 }
-.image{
+
+.image {
     height: 172px;
     width: auto;
     object-fit: cover;
     object-position: center;
-    border-radius: 25px 25px 0 0 !important;  /* 不這樣的話完全改不了 Card 的 border-radius */
+    border-radius: 25px 25px 0 0 !important;
+    /* 不這樣的話完全改不了 Card 的 border-radius */
 }
 
-.date{
+.date {
     color: #667080;
 }
 
-.title{
+.title {
     color: #1F2933;
 }
